--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>iw-aws-lambda-blog</groupId>
-	<artifactId>iw.aws.lambda.blog</artifactId>
-	<version>0.0.1</version>
+	<groupId>iw.aws.lambda.blog</groupId>
+	<artifactId>iw-aws-lambda-blog</artifactId>
+	<version>1</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
